# imorph-updater

./: .gitignore  Makefile  README.md  format.sh  imorph_updater.py  justfile  lint.sh  pyproject.toml  requirements.txt
.github/: build.yml
.github/workflows/: build.yml
imorph-updater/: main.py
imorph_updater/: __init__.py  __main__.py  constants.py  enums.py  main.py  models.py  update.py
imorph_updater/mega/: __init__.py  client.py  encrypt.py
