[tool.poetry]
name = "imorph-updater"
version = "0.1.0"
description = "Automatic iMorph (by DarkLinux) updater."
authors = ["Mike \"Revinder\" Kasprzyk <michal0kasprzyk@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.1"
requests-html = "^0.10.0"
"mega.py" = "^1.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
