[tool.poetry]
name = "imorph-updater"
version = "0.1.0"
description = "Automatic iMorph (by DarkLinux) updater."
authors = ["Mike \"Revinder\" Kasprzyk <michal0kasprzyk@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9" # TODO: Bump python to 3.11 or 3.12
requests-html = "^0.10.0" # TODO: remove this package 
"mega.py" = "^1.0.8"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.0.1"
ruff = "^0.0.290"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_any_explicit = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.ruff]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "PL",  # pylint
    "N",   # pep8-naming
    "RET", # flake8-return
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "T10", # flake8-debugger
    "S",   # flake8-bandit
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "SIM", # flake8-sim
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "T201",  # main output anyway
]
